--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-<a href="./recipes/eggplant-parm.html">Eggplant Parmesan</a>
-    <img src="recipes/images/egg-parm.png" alt="Eggplant Parm Finished">
-    
+<ul>
+    <li><a href="./recipes/eggplant-parm.html">Eggplant Parmesan</a></li>
+    <li><a href="./recipes/pizza.html">Pizza</a></li>
+    <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+   
+</ul>
 
 </body>
 </html>
